get BMI endpoint and test
